feat: favicon bugfix and style

--- a/index.html
+++ b/index.html
@@ -1,17 +1,23 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="UTF-8">
-    <title>Autômato ER</title>
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <title translate="no">Autômato ER</title>
+    <link rel="icon" type="image/x-icon" href="css/favicon.png" />
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
     <div class="container">
-        <label>Digite uma cadeia de caracteres:</label>
-        <input type="text" id="input">
-        <button onclick="verificar()">Verificar</button>
+      <label>Digite uma cadeia de caracteres:</label>
+      <input type="text" id="input" />
+      <button onclick="verificar()">Verificar</button>
+      <seciton id="final">
         <div id="result"></div>
+      </seciton>
+      <footer>
+        <p>Felipe Schmidt - Gabriel Walker - Luis Tabile</p>
+      </footer>
     </div>
     <script src="js/script.js"></script>
-</body>
+  </body>
 </html>
