--- a/index.html
+++ b/index.html
@@ -15,7 +15,31 @@
         <div id="result"></div>
       </seciton>
       <footer>
-        <p>Felipe Schmidt - Gabriel Walker - Luis Tabile</p>
+        <p>
+          <a
+            href="https://github.com/FelipeESchmidt"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            Felipe Schmidt
+          </a>
+          -
+          <a
+            href="https://github.com/GabrielMWalker"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            Gabriel Walker
+          </a>
+          -
+          <a
+            href="https://github.com/LuisTabile"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            Luis Tabile
+          </a>
+        </p>
       </footer>
     </div>
     <script src="js/script.js"></script>
